--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 .env.backup
 .env.production
 .phpunit.result.cache
-.gitlab-ci.yml
+.gitlab-ci.yml.gitla
 Homestead.json
 Homestead.yaml
 auth.json
